<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rmasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rmasculino" />

        <RadioButton
            android:id="@+id/rfemenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rfememino" />

    </RadioGroup>

    <Button
        android:id="@+id/btnbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="12dp"
        android:onClick="invocarmensaje"
        android:text="@string/btnbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/txtnum2"
        android:layout_width="329dp"
        android:layout_height="69dp"
        android:ems="10"
        android:hint="@string/txtnum2"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum1" />

    <EditText
        android:id="@+id/txtnum1"
        android:layout_width="322dp"
        android:layout_height="84dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txtnum1"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnbutton" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="325dp"
        android:layout_height="129dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum2">

        <RadioButton
            android:id="@+id/suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Funciones"
            android:text="@string/msuma" />

        <RadioButton
            android:id="@+id/Resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Funciones"
            android:text="@string/mResta" />

        <RadioButton
            android:id="@+id/Multiplicación"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Funciones"
            android:text="@string/mmultiplicacion" />

        <RadioButton
            android:id="@+id/División"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Funciones"
            android:text="@string/mdivision" />
    </RadioGroup>

    <TextView
        android:id="@+id/result"
        android:layout_width="152dp"
        android:layout_height="140dp"
        android:layout_marginTop="24dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

</androidx.constraintlayout.widget.ConstraintLayout>